--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
+
 <!doctype html>
 <html>
 <head>
 	<title>quiz</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+
 </head>
 <body>
 	<div id="container">
-		<h1>Quiz: What Type of Personality?</h1>
-		<div class="question">
-			<p>Which animal are you?</p>
-			<div id="animals" class="options"></div>
+		<h1>Which of these 6 Horoscopes are you?(Cancer,Tarus,Capricorn,Leo,Gemini or Aries.)</h1>
+		<div id="quiz">
 		</div>
-		<div class="question">
-			<p>What is your favorite drink?</p>
-			<div id="drinks" class="options"></div>
-		</div>
+        <button id="results">Results</button>
 		<p id="response"></p>
 	</div>
 	<script src="app.js"></script>
